# ShadowHost-App

./: README.md  index.html  package-lock.json  package.json  renovate.json  vite.config.js
.github/workflows/: build.yml  release.yml
memory/: MEMORY.md  project_architecture.md
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: docker.rs  eggs.rs  lib.rs  main.rs  servers.rs  settings.rs  system.rs
src/components/: Sidebar.jsx  ui.jsx
src/components/tabs/: ConsoleTab.jsx  FilesTab.jsx  SettingsTab.jsx
src/lib/: api.js
src/pages/: NewServer.jsx  Overview.jsx  ServerDetail.jsx  Settings.jsx  Setup.jsx  System.jsx
src/state/: ServerContext.jsx
