[package]
name = "shadowhost"
version = "0.1.0"
description = "Modern command center for your local Minecraft server"
authors = ["ShadowHost"]
edition = "2021"

[lib]
name = "shadowhost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-shell = "2.3.3"
tauri-plugin-process = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
dirs = "5"

[profile.release]
codegen-units = 1
lto = true
strip = true
